# GOOSGT

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
.travis/: linux..before_install.sh  linux..before_script.sh  linux..install.sh  linux..script.sh  osx..before_script.sh  osx..install.sh  osx..script.sh
simpleQt/: CMakeLists.txt  helloWorldQt.cpp
tests/: CMakeLists.txt  testGtest.cpp
